Inter-line spacing and baseline fix for the tag list/cloud.

--- a/packages/tags/src/sass/_module.scss
+++ b/packages/tags/src/sass/_module.scss
@@ -23,7 +23,7 @@
 	color: $uikit-colour-Text;
 	line-height: $uikit-leading;
 	margin-bottom: uikit-space( 0.25 );
-	vertical-align: middle;
+	// vertical-align: middle;
 
 	.uikit-body & {
 		margin-bottom: uikit-space( 0.25 );
@@ -31,8 +31,12 @@
 	}
 
 	> dt {
-		display: inline;
-		vertical-align: middle;
+		display: inline-block;
+		// vertical-align: middle;
+
+		.uikit-body & {
+			margin-bottom: uikit-space( 0.25 );
+		}
 	}
 }
 
@@ -40,21 +44,21 @@
 	border: 1px solid $uikit-colour-Beta-50;
 	border-radius: $uikit-border-radius;
 	display: inline-block;
-	margin: 0 0.4em uikit-space( 0.25 ) 0;
+	margin: 0 uikit-space( 0.25 ) uikit-space( 0.25 ) 0;
 	padding: 0 0.4em;
-	vertical-align: middle;
+	// vertical-align: middle;
 
 	.uikit-body & {
-		padding-left: 0.4em;
 		margin-bottom: uikit-space( 0.25 );
+		padding-left: 0.4em;
 	}
 
 	> a {
 		display: inline-block;
-		text-decoration: none;
-		color: $uikit-colour-Text;
 		margin: 0 -0.4em;
 		padding: 0 0.4em;
+		text-decoration: none;
+		color: $uikit-colour-Text;
 
 		&:hover,
 		&:focus {
